// ============================================================
// CRM-SERVICE / BUSINESS MANAGEMENT SYSTEM FOR SMALL BUSINESSES
// MVP — BEAUTY SALON
//
// Current scope:
// - 1 administrative user per company
// - 1 company per user
// - Customer access through Google Auth
// - Customers can make appointments
// - An appointment can contain multiple services
// - There are no professionals/employees in the MVP
// - Marketing, AI, loyalty, and reviews are outside the MVP
// - Payments and subscriptions are part of the system,
//   but will be implemented later
// ============================================================



// ============================================================
// ENUMS
// ============================================================

enum subscription_status {
  active
  inactive
  trial
  cancelled
  expired
}

enum appointment_status {
  scheduled
  confirmed
  in_progress
  completed
  cancelled
  no_show
  waiting
}

enum payment_method {
  cash
  credit_card
  debit_card
  pix
  bank_transfer
}

enum payment_status {
  pending
  paid
  failed
  refunded
  partially_refunded
}

enum transaction_type {
  income
  expense
}

enum day_of_week {
  monday
  tuesday
  wednesday
  thursday
  friday
  saturday
  sunday
}



// ============================================================
// ADMINISTRATIVE USER
// Owner/person responsible for the company and administrative
// user of the platform.
// ============================================================

Table users {
  id uuid [primary key]

  name varchar(255) [not null]
  email varchar(255) [unique, not null]
  tax_id varchar(14) [unique]
  phone varchar(20)

  active boolean [default: true]

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  note: '''
  Administrative user of the platform.
  Each user has exactly one company.
  '''
}



// ============================================================
// COMPANY
// In the MVP, represents the salon/business managed by the user.
// ============================================================

Table companies {
  id uuid [primary key]

  user_id uuid [not null, unique]

  name varchar(255) [not null]

  address text
  district varchar(100)
  city varchar(100)
  state varchar(2)
  postal_code varchar(10)

  phone varchar(20)
  email varchar(255)
  instagram varchar(255)
  logo_url varchar(255)

  active boolean [default: true]

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  note: '''
  Company managed by the user.
  Each company has exactly one administrative user,
  and each user has exactly one company.
  '''
}



// ============================================================
// SERVICE
// Service offered by the company and made available for
// customer appointments.
// ============================================================

Table services {
  id uuid [primary key]

  company_id uuid [not null]

  name varchar(255) [not null]
  price decimal(10,2) [not null]
  duration integer [not null]

  active boolean [default: true]

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  note: '''
  Services offered by the company.
  duration is stored in minutes.
  '''
}



// ============================================================
// CUSTOMER
// End customer who uses the system to make
// appointments.
//
// Access is provided through Google Auth.
// ============================================================

Table customers {
  id uuid [primary key]

  company_id uuid [not null]

  name varchar(255) [not null]
  email varchar(255) [not null]
  google_id varchar(255) [not null]

  active boolean [default: true]

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (company_id, google_id) [unique]
    (company_id, email) [unique]
  }

  note: '''
  End customer of the company.

  The customer accesses the system using their Google account.
  The same customer can use the system for different companies,
  so uniqueness is defined together with the company.
  '''
}



// ============================================================
// APPOINTMENT
//
// Represents a reservation made by the customer.
//
// Flow:
//
// Customer
//   ↓
// selects date/time
//   ↓
// selects service(s)
//   ↓
// backend validates rules
//   ↓
// appointment saved
// ============================================================

Table appointments {
  id uuid [primary key]

  company_id uuid [not null]
  customer_id uuid [not null]

  start_at timestamp [not null]
  end_at timestamp [not null]

  status appointment_status [default: 'scheduled']

  total_amount decimal(10,2)

  cancellation_reason text

  reminder_sent boolean [default: false]
  reminder_sent_at timestamp

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  note: '''
  Appointment made by the customer.

  An appointment belongs to one customer and can
  contain one or more services.
  '''
}



// ============================================================
// APPOINTMENT x SERVICE
//
// N:N relationship.
// Allows an appointment to contain multiple services.
// ============================================================

Table appointment_services {
  id uuid [primary key]

  appointment_id uuid [not null]
  service_id uuid [not null]

  price_at_booking decimal(10,2) [not null]
  duration_at_booking integer [not null]

  created_at timestamp [default: `now()`]

  indexes {
    (appointment_id, service_id) [unique]
  }

  note: '''
  Services belonging to an appointment.

  price_at_booking and duration_at_booking preserve the value
  and duration at the time of reservation, even if the
  service is changed later.
  '''
}



// ============================================================
// PAYMENT
//
// Payment made by the customer when using the company's
// services.
//
// Will be implemented later together with authentication
// and the system's final features.
// ============================================================

Table payments {
  id uuid [primary key]

  appointment_id uuid [unique, not null]
  company_id uuid [not null]

  amount decimal(10,2) [not null]

  method payment_method [not null]

  card_brand varchar(50)
  installments integer [default: 1]

  status payment_status [default: 'pending']

  transaction_id varchar(255)
  paid_at timestamp

  processed_by uuid [not null]

  notes text

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  note: '''
  Payment made by the customer for the appointment.

  In the current model:
  1 appointment can generate at most 1 payment.
  '''
}



// ============================================================
// FINANCIAL TRANSACTION
//
// Company's financial history.
//
// A payment can generate an income transaction.
// Other expenses may be recorded directly
// in this table in the future.
// ============================================================

Table financial_transactions {
  id uuid [primary key]

  company_id uuid [not null]

  payment_id uuid

  type transaction_type [not null]

  category varchar(100) [not null]

  description text

  amount decimal(10,2) [not null]

  transaction_date date [not null]

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  note: '''
  Company's financial history.

  income represents revenue.
  expense represents costs.

  Revenue can be linked to a payment.
  '''
}



// ============================================================
// SUBSCRIPTION PLANS
//
// Subscription to our platform.
// Does not represent payments from salon customers.
// ============================================================

Table subscription_plans {
  id uuid [primary key]

  name varchar(100) [not null]
  description text

  monthly_price decimal(10,2) [not null]
  annual_price decimal(10,2)

  max_customers integer
  max_appointments_per_month integer

  features json

  active boolean [default: true]

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  note: '''
  Plans offered by the CRM-Service platform.
  Example: Basic, Premium, Enterprise.

  These plans refer to the user's subscription
  to use our platform.
  '''
}



// ============================================================
// SUBSCRIPTION
//
// Platform subscription used by the
// administrative user.
// ============================================================

Table subscriptions {
  id uuid [primary key]

  user_id uuid [not null]
  plan_id uuid [not null]

  status subscription_status [default: 'trial']

  start_date date [not null]
  end_date date

  trial_ends_at timestamp

  payment_method_id varchar(255)

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  note: '''
  Subscription history of the administrative user
  for use of the platform.

  Does not represent payments made by salon customers.
  '''
}



// ============================================================
// BUSINESS HOURS
//
// Defines the hours during which the company accepts appointments.
// ============================================================

Table business_hours {
  id uuid [primary key]

  company_id uuid [not null]

  weekday day_of_week [not null]

  opens_at time
  closes_at time

  closed boolean [default: false]

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (company_id, weekday) [unique]
  }

  note: '''
  Defines the company's business hours.

  The system will use this information to determine
  available appointment times.
  '''
}



// ============================================================
// RELATIONSHIPS
// ============================================================


// ------------------------------------------------------------
// USER <-> COMPANY
// 1 user = exactly 1 company
// 1 company = exactly 1 user
// ------------------------------------------------------------

Ref: companies.user_id - users.id



// ------------------------------------------------------------
// COMPANY -> SERVICES
// A company has multiple services.
// ------------------------------------------------------------

Ref: services.company_id > companies.id



// ------------------------------------------------------------
// COMPANY -> CUSTOMERS
// A company has multiple customers.
// ------------------------------------------------------------

Ref: customers.company_id > companies.id



// ------------------------------------------------------------
// COMPANY -> APPOINTMENTS
// ------------------------------------------------------------

Ref: appointments.company_id > companies.id



// ------------------------------------------------------------
// CUSTOMER -> APPOINTMENTS
// A customer can have multiple appointments.
// An appointment belongs to one customer.
// ------------------------------------------------------------

Ref: appointments.customer_id > customers.id



// ------------------------------------------------------------
// APPOINTMENT -> APPOINTMENT_SERVICES
// ------------------------------------------------------------

Ref: appointment_services.appointment_id > appointments.id



// ------------------------------------------------------------
// SERVICE -> APPOINTMENT_SERVICES
// ------------------------------------------------------------

Ref: appointment_services.service_id > services.id



// ------------------------------------------------------------
// APPOINTMENT -> PAYMENT
// An appointment can generate at most one payment.
// ------------------------------------------------------------

Ref: payments.appointment_id - appointments.id



// ------------------------------------------------------------
// COMPANY -> PAYMENTS
// ------------------------------------------------------------

Ref: payments.company_id > companies.id



// ------------------------------------------------------------
// USER -> PAYMENTS
// User who recorded/processed the payment.
// ------------------------------------------------------------

Ref: payments.processed_by > users.id



// ------------------------------------------------------------
// COMPANY -> FINANCIAL TRANSACTIONS
// ------------------------------------------------------------

Ref: financial_transactions.company_id > companies.id



// ------------------------------------------------------------
// PAYMENT -> FINANCIAL TRANSACTION
// A payment can generate a financial transaction.
// ------------------------------------------------------------

Ref: financial_transactions.payment_id > payments.id



// ------------------------------------------------------------
// USER -> SUBSCRIPTIONS
// The user subscribes to our platform.
// ------------------------------------------------------------

Ref: subscriptions.user_id > users.id



// ------------------------------------------------------------
// PLAN -> SUBSCRIPTIONS
// ------------------------------------------------------------

Ref: subscriptions.plan_id > subscription_plans.id



// ------------------------------------------------------------
// COMPANY -> BUSINESS HOURS
// ------------------------------------------------------------

Ref: business_hours.company_id > companies.id